# my_demo

./: README.md  onwritemsg.c
panther_sdk/: .gitignore  .gitversion  README  build_img.sh  config_for_x86.sh
panther_sdk/bki/: uzImage_20180626152808  uzImage_20180817172041
panther_sdk/openwrt/: .config  .config.avs  .config.avs.mpd  .config.old  .kconfig  .kconfig.avs  .kconfig_es7243  .kconfig_ti  Build.sh  Config.in  Makefile  install_host_tools.sh  key-build  key-build.pub  readme.txt  rules.mk
panther_sdk/openwrt/package/duer_linux/src/: CMakeLists.txt  build.sh  build_third.sh
panther_sdk/openwrt/package/duer_linux/src/DCSApp/: CMakeLists.txt
panther_sdk/openwrt/package/duer_linux/src/DCSApp/include/DCSApp/: ActivityMonitorSingleton.h  AlsaRecorder.h  ApplicationManager.h  Configuration.h  DCSApplication.h  DeviceIoWrapper.h  DuerLinkCchipInstance.h  DuerLinkWrapper.h  DuerosFifoCmdTrigger.h  PortAudioMicrophoneWrapper.h  SoundController.h  VoiceAndTouchWakeUpObserver.h
panther_sdk/openwrt/package/duer_linux/src/DCSApp/include/MediaPlayer/: AlertsPlayerProxy.h  AlsaController.h  AudioPlayerImpl.h  AudioPlayerInterface.h  BlueToothPlayerProxy.h  LocalPlayerProxy.h  LocalSynthesizerPlayer.h  LocalTtsProxy.h  MediaPlayerProxy.h  PcmBufPool.h  PcmResampler.h  RapidPcmPlayer.h  SimpleAudioPlayerImpl.h  StreamPool.h  TimerUtil.h  TtsPlayer.h  TtsPlayerProxy.h
panther_sdk/openwrt/package/duer_linux/src/DCSApp/include/Others/: snowboy-detect.h
panther_sdk/openwrt/package/duer_linux/src/DCSApp/src/: ActivityMonitorSingleton.cpp  AlsaRecorder.cpp  ApplicationManager.cpp  CMakeLists.txt  Configuration.cpp  DCSApplication.cpp  DeviceIoWrapper.cpp  DuerLinkCchipInstance.cpp  DuerLinkWrapper.cpp  DuerosFifoCmdTrigger.cpp  EpollImplement.cpp  EpollImplement.h  PortAudioMicrophoneWrapper.cpp  RecordAudioManager.cpp  SoundController.cpp  SystemUpdateRevWrapper.cpp  ThreadPoolExecutor.cpp  VoiceAndTouchWakeUpObserver.cpp  main.cpp  resample_441_to_16.c_back  resample_441_to_16.cpp  snowBoy.cpp
panther_sdk/openwrt/package/duer_linux/src/DCSApp/src/Box86/: DuerLinkWrapper.cpp
panther_sdk/openwrt/package/duer_linux/src/DCSApp/src/MediaPlayer/: AlertsPlayerProxy.cpp  AlsaController.cpp  AudioDecoder.cpp  AudioPlayerImpl.cpp  BlueToothPlayerProxy.cpp  LocalPlayerProxy.cpp  LocalSynthesizerPlayer.cpp  LocalTtsProxy.cpp  MediaPlayerProxy.cpp  OffsetManager.cpp  PcmBufPool.cpp  PcmResampler.cpp  RapidPcmPlayer.cpp  SimpleAudioplayerImpl.cpp  StreamPool.cpp  TimerUtil.cpp  TtsPlayer.cpp  TtsPlayerProxy.cpp
panther_sdk/openwrt/package/duer_linux/src/DCSApp/src/audioResample/: audioResample.cpp
panther_sdk/openwrt/package/duer_linux/src/Framework/: CMakeLists.txt
panther_sdk/openwrt/package/duer_linux/src/Framework/DeviceIo/include/DeviceIo/: DeviceIo.h  list.h
panther_sdk/openwrt/package/duer_linux/src/Framework/DeviceIo/src/: CMakeLists.txt
panther_sdk/openwrt/package/duer_linux/src/Framework/DeviceIo/src/linux/: DeviceIo.cpp
panther_sdk/openwrt/package/duer_linux/src/appresources/: CMakeLists.txt
panther_sdk/openwrt/package/duer_linux/src/resources/: config.json  hotword-control-cmd-v3-20171110.umdl  hotword-control-cmd-v3-20180117.umdl  hotword.umdl  universal_detect.res  xiaodu_l12r10_sen_35_35_32_highsen_40_40_39_0104.umdl
panther_sdk/openwrt/package/duer_linux/src/resources/certs/: cacert.crt
panther_sdk/openwrt/package/duer_linux/src/sdk/: log.config
panther_sdk/openwrt/package/duer_linux/src/sdk/include/Configuration/: Configuration.h  ConfigurationNode.h
panther_sdk/openwrt/package/duer_linux/src/sdk/include/DcsSdk/: ApplicationImplementation.h  ConnectionStatusObserverInterface.h  DcsSdk.h  DcsSdkParameters.h  KeyWordObserverInterface.h  LocalMediaPlayerInterface.h  LocalMediaPlayerObserverInterface.h  MediaPlayerInterface.h
panther_sdk/openwrt/package/duer_linux/src/sdk/include/DeviceTools/: TimeUtils.h
panther_sdk/openwrt/package/duer_linux/src/sdk/include/LoggerUtils/: Level.h  LogEntryBuffer.h  Logger.h
panther_sdk/openwrt/package/duer_linux/src/sdk/include/RuntimeConfiguration/: RuntimeConfiguration.h  RuntimeConfigurationNode.h
panther_sdk/openwrt/package/duer_linux/src/sdk/include/duer_link/: duer_link_sdk.h
panther_sdk/openwrt/package/legacy/cyassl/src/: Makefile.am  Makefile.in  README  configure  configure.in  cyassl.sln  cyassl.vcproj
panther_sdk/openwrt/package/legacy/cyassl/src/certs/: taoCert.txt
panther_sdk/openwrt/package/legacy/cyassl/src/ctaocrypt/: Makefile.am  Makefile.in
panther_sdk/openwrt/package/legacy/cyassl/src/ctaocrypt/benchmark/: Makefile.in  benchmark.c
panther_sdk/openwrt/package/legacy/cyassl/src/ctaocrypt/include/: aes.h  error.h  integer.h  tfm.h  types.h
panther_sdk/openwrt/package/legacy/cyassl/src/ctaocrypt/src/: Makefile.in  aes.c  asn.c  coding.c  integer.c  misc.c  random.c  rsa.c  tfm.c
panther_sdk/openwrt/package/legacy/cyassl/src/ctaocrypt/test/: Makefile.am  Makefile.in  test.c
panther_sdk/openwrt/package/legacy/cyassl/src/examples/: Makefile.in  test.h
panther_sdk/openwrt/package/legacy/cyassl/src/examples/client/: Makefile.in  client.c  client.vcproj
panther_sdk/openwrt/package/legacy/cyassl/src/examples/echoclient/: Makefile.in  echoclient.c  echoclient.vcproj
panther_sdk/openwrt/package/legacy/cyassl/src/examples/echoserver/: Makefile.in  echoserver.c  echoserver.vcproj
panther_sdk/openwrt/package/legacy/cyassl/src/examples/server/: Makefile.in  server.vcproj
panther_sdk/openwrt/package/legacy/cyassl/src/include/: cyassl_int.h
panther_sdk/openwrt/package/legacy/cyassl/src/include/openssl/: ssl.h
panther_sdk/openwrt/package/legacy/cyassl/src/src/: Makefile.am  Makefile.in  cyassl_int.c  cyassl_io.c  keys.c  ssl.c  tls.c
panther_sdk/openwrt/package/legacy/cyassl/src/testsuite/: Makefile.in  testsuite.c  testsuite.vcproj
panther_sdk/panther/tools/msign/: CMakeLists.txt  Makefile  encrypt.c  key  main.c  msign  note
tcp_demo_c/: 111  des  des_new  des_new.c  event_queue.c  event_queue.h  md5.c  queue.h  tcp_client  tcp_client.c
tcp_demo_c/DEC/: DES  DES.c  crc.c  (+3 more)
(+2835 files in other folders)
